--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   </head>
 
   <body>
-    <div class="aaa">
+    <div class="header">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
 
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="main">
+      <p>
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task"class="main__input main__input-text task" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -26,22 +26,22 @@
       <ul id="incompleteTasks">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
+          <label class="main__label task">Pay Bills</label>
           <input type="text">
           
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="main__button-edit edit">Edit</button>
+          <button class="main__button-delete delete">
             <img src="./remove.svg">
           </button>
         </li>
 
-        <li class="editMode">
+        <li class="main__edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <label class="main__label task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="main__input main__input-text task">
 
-          <button class="edit">Save</button>
-          <button class="delete">
+          <button class="main__button-edit edit">Save</button>
+          <button class="main__button-delete delete">
             <img src="./remove.svg">
           </button>
         </li>
@@ -52,11 +52,11 @@
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+          <label class="main__label task">See the Doctor</label>
+          <input type="text" class="main__input main__input-text task">
 
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="main__button-edit edit">Edit</button>
+          <button class="main__button-delete delete">
             <img src="./remove.svg">
           </button>
         </li>
