--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li>
           <input type="checkbox">
           <label class="main__label task">Pay Bills</label>
-          <input type="text">
+          <input type="text" value="Pay Bills" class="main__input main__input-text task">
           
           <button class="main__button-edit edit">Edit</button>
           <button class="main__button-delete delete">
