--- a/index.html
+++ b/index.html
@@ -6,58 +6,58 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
 
-  <body>
+  <body class="body">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="header__img" src="./eisenhower-matrix.jpg">
       <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
 
     <div class="main">
-      <p>
-        <label for="new-task">Add Item</label>
+      <p class="adding">
+        <label class="adding__label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="main__input main__input-text task" type="text">
-          <button>Add</button>
+          <input id="new-task" class="main__input main__input-new-task main__input-text task" type="text">
+          <button class="main__button main__button-add" >Add</button>
         </div>
       </p>
 
-      <h3>Todo</h3>
+      <h3 class="main__head">Todo</h3>
 
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
+      <ul id="incompleteTasks" class="incomplete-tasks">
+        <li  class="incomplete-tasks__item">
+          <input class="main__input main__input-checkbox" type="checkbox">
           <label class="main__label task">Pay Bills</label>
           <input type="text" value="Pay Bills" class="main__input main__input-text task">
           
-          <button class="main__button-edit edit">Edit</button>
-          <button class="main__button-delete delete">
-            <img src="./remove.svg">
+          <button class="main__button main__button-edit edit">Edit</button>
+          <button class="main__button main__button-delete delete">
+            <img class="main__del-icon" src="./remove.svg">
           </button>
         </li>
 
-        <li class="main__edit-mode">
-          <input type="checkbox">
+        <li class="incomplete-tasks__item main__edit-mode">
+          <input class="main__input main__input-checkbox" type="checkbox">
           <label class="main__label task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="main__input main__input-text task">
 
-          <button class="main__button-edit edit">Save</button>
-          <button class="main__button-delete delete">
-            <img src="./remove.svg">
+          <button class="main__button main__button-edit edit">Save</button>
+          <button class="main__button main__button-delete delete">
+            <img class="main__del-icon" src="./remove.svg">
           </button>
         </li>
       </ul>
 
-      <h3>Completed</h3>
+      <h3 class="main__head">Completed</h3>
 
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
+      <ul id="completed-tasks" class="completed-tasks">
+        <li class="completed-tasks__item">
+          <input class="main__input main__input-checkbox" type="checkbox" checked>
           <label class="main__label task">See the Doctor</label>
           <input type="text" class="main__input main__input-text task">
 
-          <button class="main__button-edit edit">Edit</button>
-          <button class="main__button-delete delete">
-            <img src="./remove.svg">
+          <button class="main__button main__button-edit edit">Edit</button>
+          <button class="main__button main__button-delete delete">
+            <img class="main__del-icon" src="./remove.svg">
           </button>
         </li>
       </ul>
