--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <h3 class="main__head">Todo</h3>
 
       <ul id="incompleteTasks" class="incomplete-tasks">
-        <li  class="incomplete-tasks__item">
+        <li class="incomplete-tasks__item">
           <input class="main__input main__input-checkbox" type="checkbox">
           <label class="main__label task">Pay Bills</label>
           <input type="text" value="Pay Bills" class="main__input main__input-text task">
           
-          <button class="main__button main__button-edit edit">Edit</button>
-          <button class="main__button main__button-delete delete">
+          <button class="main__button main__button-edit">Edit</button>
+          <button class="main__button main__button-delete">
             <img class="main__del-icon" src="./remove.svg">
           </button>
         </li>
@@ -40,8 +40,8 @@
           <label class="main__label task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="main__input main__input-text task">
 
-          <button class="main__button main__button-edit edit">Save</button>
-          <button class="main__button main__button-delete delete">
+          <button class="main__button main__button-edit">Save</button>
+          <button class="main__button main__button-delete">
             <img class="main__del-icon" src="./remove.svg">
           </button>
         </li>
@@ -49,13 +49,13 @@
 
       <h3 class="main__head">Completed</h3>
 
-      <ul id="completed-tasks" class="completed-tasks">
+      <ul id="completedTasks" class="completed-tasks">
         <li class="completed-tasks__item">
           <input class="main__input main__input-checkbox" type="checkbox" checked>
           <label class="main__label task">See the Doctor</label>
           <input type="text" class="main__input main__input-text task">
 
-          <button class="main__button main__button-edit edit">Edit</button>
+          <button class="main__button main__button-edit">Edit</button>
           <button class="main__button main__button-delete delete">
             <img class="main__del-icon" src="./remove.svg">
           </button>
