--- a/index.html
+++ b/index.html
@@ -7,62 +7,69 @@
   </head>
 
   <body class="body">
-    <div class="header">
+    <header class="header">
       <img class="header__img" src="./eisenhower-matrix.jpg">
       <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
+    </header>
 
-    <div class="main">
-      <p class="adding">
+    <main class="main">
+      <section class="adding">
         <label class="adding__label" for="new-task">Add Item</label>
+
         <div class="task-row-wrapper">
           <input id="new-task" class="main__input main__input-new-task main__input-text task" type="text">
           <button class="main__button main__button-add" >Add</button>
         </div>
-      </p>
+      </section>
 
-      <h3 class="main__head">Todo</h3>
+      <section>
+        <h3 class="main__head">Todo</h3>
+        <ul id="incompleteTasks" class="incomplete-tasks">
+          <li class="incomplete-tasks__item">
+            <input class="main__input main__input-checkbox" type="checkbox">
 
-      <ul id="incompleteTasks" class="incomplete-tasks">
-        <li class="incomplete-tasks__item">
-          <input class="main__input main__input-checkbox" type="checkbox">
-          <label class="main__label task">Pay Bills</label>
-          <input type="text" value="Pay Bills" class="main__input main__input-text task">
-          
-          <button class="main__button main__button-edit">Edit</button>
-          <button class="main__button main__button-delete">
-            <img class="main__del-icon" src="./remove.svg">
-          </button>
-        </li>
+            <label class="main__label task">Pay Bills</label>
+            <input type="text" value="Pay Bills" class="main__input main__input-text task">
+            
+            <button class="main__button main__button-edit">Edit</button>
+            <button class="main__button main__button-delete">
+              <img class="main__del-icon" src="./remove.svg">
+            </button>
+          </li>
 
-        <li class="incomplete-tasks__item main__edit-mode">
-          <input class="main__input main__input-checkbox" type="checkbox">
-          <label class="main__label task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="main__input main__input-text task">
+          <li class="incomplete-tasks__item main__edit-mode">
+            <input class="main__input main__input-checkbox" type="checkbox">
 
-          <button class="main__button main__button-edit">Save</button>
-          <button class="main__button main__button-delete">
-            <img class="main__del-icon" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
+            <label class="main__label task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="main__input main__input-text task">
 
-      <h3 class="main__head">Completed</h3>
+            <button class="main__button main__button-edit">Save</button>
+            <button class="main__button main__button-delete">
+              <img class="main__del-icon" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
 
-      <ul id="completedTasks" class="completed-tasks">
-        <li class="completed-tasks__item">
-          <input class="main__input main__input-checkbox" type="checkbox" checked>
-          <label class="main__label task">See the Doctor</label>
-          <input type="text" class="main__input main__input-text task">
+      <section>
+        <h3 class="main__head">Completed</h3>
 
-          <button class="main__button main__button-edit">Edit</button>
-          <button class="main__button main__button-delete delete">
-            <img class="main__del-icon" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
+        <ul id="completedTasks" class="completed-tasks">
+          <li class="completed-tasks__item">
+            <input class="main__input main__input-checkbox" type="checkbox" checked>
 
-    </div>
+            <label class="main__label task">See the Doctor</label>
+            <input type="text" class="main__input main__input-text task">
+  
+            <button class="main__button main__button-edit">Edit</button>
+            <button class="main__button main__button-delete delete">
+              <img class="main__del-icon" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+
+    </main>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
