refactor: accroding to rule 1.2 ALT for multimedia

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body class="body">
     <header class="header">
-      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
       <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
 
@@ -33,7 +33,7 @@
             
             <button class="main__button main__button-edit">Edit</button>
             <button class="main__button main__button-delete">
-              <img class="main__del-icon" src="./remove.svg">
+              <img class="main__del-icon" src="./remove.svg" alt="del-icon">
             </button>
           </li>
 
@@ -45,7 +45,7 @@
 
             <button class="main__button main__button-edit">Save</button>
             <button class="main__button main__button-delete">
-              <img class="main__del-icon" src="./remove.svg">
+              <img class="main__del-icon" src="./remove.svg" alt="del-icon">
             </button>
           </li>
         </ul>
@@ -63,7 +63,7 @@
   
             <button class="main__button main__button-edit">Edit</button>
             <button class="main__button main__button-delete delete">
-              <img class="main__del-icon" src="./remove.svg">
+              <img class="main__del-icon" src="./remove.svg" alt="del-icon">
             </button>
           </li>
         </ul>
